@@ -1,3 +1,13 @@
+2011-10-14  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	Backport from mainline
+	2011-08-06  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	PR libobjc/50002
+	* class.c (__objc_update_classes_with_methods): Iterate over meta
+	classes as well as normal classes when refreshing the method
+	implementations.  This fixes replacing class methods.
+
 2011-06-27  Release Manager
 
 	* GCC 4.6.1 released.
